--- a/assets/farmacia.css
+++ b/assets/farmacia.css
@@ -1,64 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    min-height: 100vh;
-}
-
-.logo {
-    width: 120px;
-    height: 70px;
-    object-fit: cover;
-}
-
-@media screen and (max-width: 320px) {
-    .logo {
-        width: 100px;
-        height: 50px;
-        object-fit: cover;
-    }
-}
-
-.navbar {
-    background-color: #7819ac;
-}
-
-.navbar-nav .nav-link {
-    --bs-nav-link-font-size: 18px;
-    --bs-nav-link-color: rgb(255, 255, 255);
-    font-style: italic;
-}
-
-.navbar-nav .nav-link.active {
-    --bs-navbar-active-color: rgb(255, 255, 255);
-    --bs-nav-link-font-size: 20px;
-    font-style: italic;
-    font-weight: bolder;
-}
-
-.imgcarrito {
-    width: 30px;
-    height: 30px;
-}
-
-.imgicono {
-    width: 30px;
-    height: 30px;
-}
-
-.footer {
-    background-color: #b2abf2;
-}
-
-.logoFooter {
-    width: 180px;
-    height: 100px;
-    object-fit: cover;
-}
-
 .filtros {
     margin-top: 105px;
 }
@@ -88,4 +27,50 @@ body {
 
 .ordenar {
     color: white;
+}
+
+.search {
+    color: white;
+}
+
+.container-cards {
+    width: 100%;
+    margin-top: 2%;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    justify-items: center;
+    gap: 30px;
+}
+
+@media (min-width: 0px) {
+    .container-cards {
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+
+@media (min-width: 768px) {
+    .container-cards {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (min-width: 1200px) {
+    .container-cards {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media (min-width: 1400px) {
+    .container-cards {
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+
+.mensaje{
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    font-style: italic;
+    font-weight: bolder;
+    font-size: larger;
 }
