--- a/assets/general.css
+++ b/assets/general.css
@@ -44,11 +44,6 @@ body {
     height: 30px;
 }
 
-.imgicono {
-    width: 30px;
-    height: 30px;
-}
-
 .footer {
     background-color: #b2abf2;
 }
@@ -59,13 +54,13 @@ body {
     object-fit: cover;
 }
 
-/* estilos de las tarjestas */
+/* estilos de las tarjetas */
 .product-card {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     row-gap: 16px;
-    width: 280px;
+    width: 320px;
     background-color: white;
     padding: 10px;
     border: 2px solid #7819ac;
@@ -85,13 +80,13 @@ body {
     justify-content: space-between;
     gap: 10px;
     background-color: #351B6B;
-    font-size: 14px;
+    font-size: 12px;
     color: #fff;
     letter-spacing: 1px;
     padding: 20px;
     border-radius: inherit;
     animation: fadeIn 0.5s;
-    height: 165px;
+    height: 200px;
 }
 
 .product-card__title {
