--- a/assets/farmacia.css
+++ b/assets/farmacia.css
@@ -13,14 +13,14 @@
     margin: 10px;
     width: 30px;
     height: 30px;
-    border: 2px solid white;
+    border: 2px solid black;
     border-radius: 100%;
     align-self: start;
     background: rgba(255, 255, 255, 0.5);
 }
 
 .clouse:hover {
-    background: white;
+    background: rgba(0, 0, 0, 0.5);
 }
 
 #filterSearch {
@@ -87,39 +87,38 @@
     flex-direction: column;
     align-items: center;
     --active: 0;
-    background: hsl(260 calc(var(--active) * 97%) 6%);
+    background: rgba(0, 0, 0, 0.8);
     font-family: system-ui, sans-serif;
     transition: width 1s, height 1s, right 1s, background var(--transition);
     overflow: hidden;
 }
 
-#details>img {
+.datos>img {
     width: 300px;
-    border: 2px solid black;
-    box-shadow: 0px 0px 10px 10px rgba(255, 255, 255, 0.5);
+    box-shadow: 0px 0px 7px 7px rgba(0, 0, 0, 0.5);
 }
 
 .datos {
-    color: white;
-    border: 2px solid white;
-    border-radius: 5%;
-    height: 35%;
-    margin: 5%;
-    padding: 5%;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    width: 90%;
+    height: 75%;
+    border-radius: 10px;
+    color: white;
     overflow: hidden;
 }
 
 .datos h2 {
     text-align: center;
-    margin-bottom: 10%;
+    margin-top: 5%;
 }
 
 .datos div {
-    padding: 10px;
-    border: 1px solid white;
-    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 60%;
 }
 
 .datos:nth-child(2) {
@@ -139,21 +138,21 @@
     }
 
     #details img {
-        width: 150px;
+        width: 200px;
     }
 
     .datos {
-        height: 45%;
+        height: 75%;
         margin: 2%;
         padding: 2%;
     }
 
     .datos h2 {
-        font-size: 20px;
+        font-size: 30px;
     }
 
     .datos p {
-        font-size: 14px;
+        font-size: 18px;
     }
 
     .button {
@@ -215,11 +214,11 @@
     }
 
     .datos h2 {
-        font-size: 200%;
+        font-size: 40px;
     }
 
     .datos p {
-        font-size: 100%;
+        font-size: 20px;
     }
 }
 
@@ -254,7 +253,7 @@
     border-radius: 100px;
     position: relative;
     box-shadow:
-        0 0 calc(var(--active) * 6em) calc(var(--active) * 3em) hsl(260 97% 61% / 0.75),
+        0 0 calc(var(--active) * 6em) calc(var(--active) * 2em) hsl(260 97% 61% / 0.75),
         0 0.05em 0 0 hsl(260 calc(var(--active) * 97%) calc((var(--active) * 50%) + 30%)) inset,
         0 -0.05em 0 0 hsl(260 calc(var(--active) * 97%) calc(var(--active) * 60%)) inset;
     transition: box-shadow var(--transition), scale var(--transition), background var(--transition);
@@ -315,7 +314,7 @@ svg {
     position: absolute;
     inset: -0.25em;
     z-index: -1;
-    border: 0.25em solid hsl(260 97% 50% / 0.5);
+    border: 0.25em solid hsla(260, 68%, 40%, 0.5);
     border-radius: 100px;
     opacity: var(--active, 0);
     transition: opacity var(--transition);
@@ -411,7 +410,7 @@ svg {
 
 .particle-pen {
     position: absolute;
-    width: 200%;
+    width: 150%;
     aspect-ratio: 1;
     top: 50%;
     left: 50%;
@@ -437,7 +436,7 @@ svg {
 }
 
 .particle path {
-    fill: hsl(0 0% 90%);
+    fill: hsl(0, 0%, 100%);
     stroke: none;
 }
 
