--- a/assets/juguetes.css
+++ b/assets/juguetes.css
@@ -239,8 +239,8 @@
             hsl(260 calc(var(--active) * 97%) 70% / var(--active)),
             transparent),
         hsl(260 calc(var(--active) * 97%) calc((var(--active) * 44%) + 12%));
-    /* background: var(--bg); */
-    background: #7819ac;
+     background: var(--bg);
+     background: #7819ac;
     margin-top: 100px;
     font-size: 20px;
     font-weight: 500;
@@ -463,4 +463,4 @@ svg {
 .button svg {
     inline-size: 1.25em;
     translate: -25% -5%;
-}
+} 
