--- a/assets/carrito.css
+++ b/assets/carrito.css
@@ -1,8 +1,42 @@
-.carrito{
-    margin-top: 130px;
+.carrito {
+    margin-top: 120px;
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+    align-items: center;
 }
 
-.imglista{
+.imglista {
     object-fit: contain;
-    height: 100px;
+    height: 110px;
+}
+
+.filas {
+
+    border: solid #7819ac;
+}
+
+.infotit {
+    margin-top: 15px;
+
+}
+
+.colinfo {
+    margin-top: 45px;
+}
+
+#eliminarItem {
+    width: 25px;
+    height: 25px;
+    background-color: #7819ac;
+    color: white;
+}
+
+#eliminarItem:hover {
+    background-color: #ac41ee;
+}
+
+.botoneliminar {
+    border: 0;
+    background-color: white;
 }
