--- a/assets/general.css
+++ b/assets/general.css
@@ -27,21 +27,26 @@ body {
 }
 
 .navbar-nav .nav-link {
-    --bs-nav-link-font-size: 18px;
+    --bs-nav-link-font-size: 17px;
     --bs-nav-link-color: rgb(255, 255, 255);
     font-style: italic;
 }
 
 .navbar-nav .nav-link.active {
     --bs-navbar-active-color: rgb(255, 255, 255);
-    --bs-nav-link-font-size: 20px;
+    --bs-nav-link-font-size: 18px;
     font-style: italic;
     font-weight: bolder;
 }
 
 .imgcarrito {
-    width: 30px;
-    height: 30px;
+    font-size: 18px;
+    color: white;
+}
+
+.imgicono {
+    font-size: 25px;
+    color: black;
 }
 
 .footer {
@@ -79,7 +84,7 @@ body {
     flex-direction: column;
     justify-content: space-between;
     gap: 10px;
-    background-color: #351B6B;
+    background: linear-gradient(180deg, #7819ac 0%, #b2abf2 95%);
     font-size: 12px;
     color: #fff;
     letter-spacing: 1px;
@@ -120,11 +125,13 @@ body {
     border-radius: 50%;
     cursor: pointer;
     transition: background-color 0.25s;
+    box-shadow: 0px 0px 10px 1px rgb(255, 255, 255);
 }
 
 .product-card__button:hover,
 .product-card__button:focus {
-    background-color: #75BAF7;
+    background-color: #7eb0f2;
+    box-shadow: none;
 }
 
 .product-card__icon {
