--- a/assets/carrito.css
+++ b/assets/carrito.css
@@ -40,3 +40,11 @@
     border: 0;
     background-color: white;
 }
+
+.quitarunidad {
+    font-size: 15px;
+}
+
+.quitarunidad:hover {
+    color: #7819ac;
+}
